--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/about">Contents</a>
+            <a href="{{ site.baseurl }}/contents">Contents</a>
           </nav>
         </header>
       </div>
