--- a/style.scss
+++ b/style.scss
@@ -31,13 +31,14 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
-  color: $darkerGray;
-  font-weight: bold;
+      font-family: 'Playfair Display', serif;
+    font-weight: 900;
+    line-height: 46px;
+    font-size: 43px;
+    margin: 0 0 23px 0;
+    color: $darkerGray;
+    
 
-  line-height: 1.7;
-  margin: 1em 0 15px;
-  padding: 0;
 
   @include mobile {
     line-height: 1.4;
