--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,7 @@
         </header>
         
         <div class="container" >
-        <div id="archives">
-            browse by <a title="The complete archive of {{ site.name }}'s Blog by category"
+        <div id="archives">browse by <a title="The complete archive of {{ site.name }}'s Blog by category"
                          href="{{ site.url}}{{site.baseurl}}/categoryview">category</a>
         </div>
     </div>
