--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,15 @@
         </header>
         
         <div class="container" >
+          
+        <div id="search">
+            <form role="search" method="get" action="{{site.baseurl}}/search/">
+                <input id="searchString" name="searchString"
+                       placeholder="Be a Better Developer, etc." type="text">
+                <input id="searchButton" name="googleSearchName" type="submit" value="Search">
+            </form>
+        </div>
+          
         <div id="archives">browse by <a title="The complete archive of {{ site.name }}'s Blog by category"
                          href="{{ site.url}}{{site.baseurl}}/categoryview">category</a>
         </div>
