--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
           </nav>
         </header>
         
-        <div class="container" >
-          
+<div class="grid" id="searchBar">
+    <div>          
         <div id="search">
             <form role="search" method="get" action="{{site.baseurl}}/search/">
                 <input id="searchString" name="searchString"
@@ -47,7 +47,7 @@
         </div>
     </div>
   </div>
-        
+      </div>        
         
         
       </div>
