--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         <div id="search">
             <form role="search" method="get" action="{{site.baseurl}}/search/">
                 <input id="searchString" name="searchString"
-                       placeholder="Be a Better Developer, etc." type="text">
+                       placeholder="search UppityApe" type="text">
                 <input id="searchButton" name="googleSearchName" type="submit" value="Search">
             </form>
         </div>
