--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,8 @@
           color: $white;
           -webkit-appearance: none;
           border-radius: 0;
+                  float: right;
+
         }
 
         #archives {
