--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@
 #searchBar {
       font-size: 80%;
       padding: 0.43em 0 0.57em;
+        float: right;
 
       #search {
         float: right;
