--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
             </form>
         </div>
           
-        <div id="archives">browse by <a title="The complete archive of {{ site.name }}'s Blog by category"
+        <div id="archives">browse my archive by <a title="The complete archive of {{ site.name }}'s Blog by category"
                          href="{{ site.url}}{{site.baseurl}}/categoryview">category</a>
         </div>
     </div>
