--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,14 @@
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
 
+
+@font-face { font-family: ETBembo;
+             src: url("ETBembo-RomanLF.ttf"); }
+@font-face { font-family: ETBembo;
+             src: url("ETBembo-DisplayItalic.ttf");
+             font-weight: normal;
+             font-style: italic; }
+
 /**************/
 /* BASE RULES */
 /**************/
