--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,10 @@ html {
 
 body {
 	background: #fffff8;
-  font: 18px/1.4 $helvetica;
+    font-family: 'EB Garamond', serif;
+    
+    // font: 18px/1.4 $helvetica;
+  
   color: #111111;
 }
 
