--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,9 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: $helveticaNeue;
+
+font-family: 'EB Garamond', serif;
+//    font-family: $helveticaNeue;
   color: #111111;
   font-weight: bold;
   line-height: 1.7;
