--- a/style.scss
+++ b/style.scss
@@ -40,6 +40,8 @@ body {
 h1, h2, h3, h4, h5, h6 {
 
 font-family: 'EB Garamond', serif;
+    font-style: italic;
+
 //    font-family: $helveticaNeue;
   color: #111111;
   font-weight: bold;
