--- a/style.scss
+++ b/style.scss
@@ -39,10 +39,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 
-font-family: 'EB Garamond', serif;
-    font-style: italic;
-
-//    font-family: $helveticaNeue;
+font-family: $helveticaNeue;
   color: #111111;
   font-weight: bold;
   line-height: 1.7;
