--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,25 +31,13 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/archivebycategory">Browse</a>
           </nav>
         </header>
         
-<div class="grid" id="searchBar">
-    <div>          
-        <div id="search">
-            <form role="search" method="get" action="{{site.baseurl}}/search/">
-                <input id="searchString" name="searchString"
-                       placeholder="search UppityApe" type="text">
-                <input id="searchButton" name="googleSearchName" type="submit" value="Search">
-            </form>
-        </div>
-          
-        <div id="archives">browse my archive by <a title="The complete archive of {{ site.name }}'s Blog by category"
-                         href="{{ site.url}}{{site.baseurl}}/categoryview">category</a>
-        </div>
-    </div>
-  </div>
+
+
+ 
       </div>        
         
         
