--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">About</a>
             <a href="{{ site.baseurl }}/archivebycategory">Browse</a>
           </nav>
         </header>
