--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">About</a>
-            <a href="{{ site.baseurl }}/archivebycategory">Browse</a>
+            <a href="{{ site.baseurl }}/categoryview">Browse</a>
           </nav>
         </header>
         
