--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
           </div>
 
           <nav>
+            <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/categoryview">Browse</a>
           </nav>
